swagger configuration on application-properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://codeguruozzy:M5Epni3iJMGO9PI3@cluster0.czhinvn.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=JavaSpringBoot
